# trimbackups

./: Main.hs  README  stack.yaml  trimbackups.cabal
Trimbackups/: Trimmer.hs
